# find

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  find-0.0.1.tgz  find-0.0.2.tgz  find-0.0.3.tgz  index.yaml  renovate.json
src/backend/: .pylintrc  MANIFEST.in  conftest.py  manage.py  pyproject.toml  setup.py
src/backend/core/: adapters.py  admin.py  api.py  apps.py  authentication.py  bolt_auth.py  decorators.py  enums.py  factories.py  handlers.py  log_redaction.py  middleware.py  models.py  opensearch.py  permissions.py  schemas.py  selftests.py  selftests_builtin.py  urls.py  utils.py  views.py
src/backend/core/management/commands/: create_search_pipeline.py  evaluate_search_engine.py  reindex_with_embedding.py  seed.py  utils.py
src/backend/core/migrations/: 0001_initial.py  0002_service_client_id_service_services.py  0003_remove_service_model.py  0003_remove_service_services_m2m_and_lock_name.py  0003_service_slug_and_editable_name.py
src/backend/core/query/: builder.py  dsl.py
src/backend/core/services/: __init__.py  albert.py  config.py  converters.py  embedding.py  indexer_services.py  indexing.py  language.py  opensearch.py  opensearch_configuration.py  opensearch_settings.py  registry.py  reindex.py  reranking.py  search.py
src/backend/core/tasks/: indexer.py  indexing.py
src/backend/core/templates/admin/: index.html  selftest.html
src/backend/core/tests/: conftest.py  factories.py  test_adapters.py  test_admin_selftest.py  test_albert_services.py  test_api_documents_delete.py  test_api_documents_index.py  test_api_documents_index_bulk.py  test_api_documents_index_single.py  test_api_documents_search.py  test_api_documents_search_access_control.py  test_api_documents_search_dsl.py  test_api_resources_delete.py  test_api_resources_index.py  test_api_search.py  test_api_search_logging.py  test_authentication.py  test_commands_seed.py  test_content_hash.py  test_decorators.py  test_embedding.py  test_fixture_isolation.py  test_handlers_delete.py  test_handlers_index.py  test_handlers_search.py  test_indexer_services.py  test_indexing.py  test_integration_per_service_indices.py  test_log_redaction.py  test_models_services.py  test_opensearch.py  test_query_builder.py  test_reindex.py  test_reranking.py  test_schemas.py  test_search.py  test_selftests.py  test_service_isolation.py  test_services_indexing.py  test_services_search_logging.py  (+4 more)
src/backend/core/tests/cassettes/: TestDeleteDocumentHandler.test_delete_existing_document_returns_204.yaml  TestDeleteDocumentHandler.test_delete_nonexistent_document_returns_404.yaml  TestDeleteDocumentHandler.test_delete_with_uuid_document_id.yaml  TestIndexDocumentView.test_index_empty_title_with_content_accepted.yaml  TestIndexDocumentView.test_index_service_name_from_auth.yaml  TestIndexDocumentView.test_index_title_normalization.yaml  TestIndexDocumentView.test_index_valid_document_returns_201.yaml  TestIndexDocumentView.test_index_valid_groups_accepted.yaml  TestIndexDocumentView.test_index_with_reach_field.yaml  TestIndexDocumentView.test_index_with_tags.yaml  TestIndexDocumentView.test_index_with_users_and_groups.yaml  TestSearchDocumentsHandler.test_search_simple_query_returns_200.yaml  TestSearchDocumentsHandler.test_search_with_sort_and_limit_returns_200.yaml  TestSearchDocumentsHandler.test_search_with_where_clause_returns_200.yaml  TestServiceIsolation.test_service_field_from_auth_not_payload.yaml
src/backend/core/tests/commands/: test_create_search_pipeline.py  test_evaluate_search_engine.py  test_reindex_with_embedding.py
src/backend/core/tests/mock/: albert_embedding_response.py
src/backend/core/tests/services/: __init__.py  test_env_config.py  test_models.py
src/backend/core/tests/tasks/: test_indexing.py
src/backend/core/tests/unit/: conftest.py  test_schemas.py
src/backend/core/tests/unit/api/: test_documents_delete.py  test_documents_index_bulk.py
src/backend/core/tests/unit/services/: test_registry.py  test_service_isolation.py
src/backend/demo/: defaults.py
src/backend/demo/management/commands/: albert.py  create_demo.py
src/backend/demo/tests/: conftest.py  test_commands_create_demo.py
src/backend/demo/tests/cassettes/: test_commands_create_demo.yaml
src/backend/drive/: celery_app.py  settings.py  urls.py  wsgi.py
src/backend/evaluation/data/corpus/: simple_corpus.py
src/backend/evaluation/data/full-text/: __init__.py
src/backend/evaluation/data/full-text/documents/: 31_La Pieuvre.txt  45_Bouillabaisse Marseillaise.txt  66_La Calligraphie.txt  72_Le Vitrail.txt  7_La Guerre Froide.txt
src/backend/evaluation/data/full_text/: __init__.py  documents.py  queries.py
src/backend/evaluation/data/full_text/documents/: 10_La Conquête Spatiale.txt  12_La Seconde Guerre Mondiale.txt  13_Le Développement Durable.txt  16_L'Union Européenne.txt  19_Le Siècle des Lumières.txt  1_La Révolution Française 1789.txt  20_Les Ressources Énergétiques.txt  21_Le Lion d'Afrique.txt  22_Le Dauphin.txt  24_Le Colibri.txt  26_Le Caméléon.txt  27_Le Manchot Empereur.txt  33_Le Gorille des Montagnes.txt  36_Le Kangourou Roux.txt  42_Ratatouille Provençale.txt  44_Tarte Tatin.txt  46_Quiche Lorraine.txt  48_Crêpes Bretonnes.txt  4_Le Réchauffement Climatique.txt  52_Mousse au Chocolat.txt  54_Salade de légumes.txt  55_Tarte au Citron Meringuée.txt  56_Magret de Canard aux Figues.txt  59_Crème Brûlée.txt  5_L'Empire Romain.txt  (+6 more)
src/backend/evaluation/data/semantic/: __init__.py  documents.py  queries.py
src/backend/evaluation/data/v0/: __init__.py  documents.py  queries.py
src/backend/evaluation/data/v1/: queries.py
src/backend/evaluation/management/commands/: evaluate_search_engine.py  utils.py
src/backend/evaluation/tests/: test_evaluate_search_engine.py
src/backend/find/: asgi.py  celery_app.py  sentry_scrubber.py  settings.py  urls.py  values.py  wsgi.py
src/backend/find/tests/: test_sentry_scrubber.py
src/backend/sentence_transformer_models/all-MiniLM-L6-v2/: config_sentence_transformers.json
(+113 files in other folders)
