#
# find package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "find"
version = "0.0.1"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
description = "An application to print markdown to pdf from a set of managed templates."
keywords = ["Django", "Contacts", "Templates", "RBAC"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]==5.5.3",
    "django-configurations==2.5.1",
    "django-cors-headers==4.7.0",
    "redis==5.2.1",
    "django-redis==6.0.0",
    "django==5.2.6",
    "django-lasuite[all]==0.0.14",
    "djangorestframework==3.16.0",
    "drf_spectacular==0.28.0",
    "dockerflow==2024.4.2",
    "factory_boy==3.3.1",
    "gunicorn==23.0.0",
    "mozilla-django-oidc==4.0.1",
    "psycopg[binary]==3.2.9",
    "pydantic==2.10.5",
    "pyjwt==2.10.1",
    "requests==2.32.4",
    "sentry-sdk==2.32.0",
    "sentence-transformers==5.1.1",
    "url-normalize==1.4.3",
    "opensearch-py==2.8.0",
    "whitenoise==6.8.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/suitenumerique/find/issues/new"
"Changelog" = "https://github.com/suitenumerique/find/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/suitenumerique/find"
"Repository" = "https://github.com/suitenumerique/find"

[project.optional-dependencies]
dev = [
    "django-extensions==4.1",
    "drf-spectacular-sidecar==2025.7.1",
    "faker==33.3.0",
    "ipdb==0.13.13",
    "ipython==8.31.0",
    "pyfakefs==5.9.1",
    "pylint-django==2.6.1",
    "pylint==3.3.7",
    "pytest-cov==6.2.1",
    "pytest-django==4.11.1",
    "pytest==8.4.1",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "responses==0.25.7",
    "ruff==0.12.2",
    "types-requests==2.32.4.20250611",
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
    "*/migrations/*",
]
line-length = 88


[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
]
ignore= ["DJ001", "PLR2004"]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","django","third-party","find","first-party","local-folder"]
sections = { find=["core"], django=["django"] }

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S", "SLF"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]
